# bookstore

./: Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
books/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/order_tests/test_viewsets/: test_order_viewset.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: product.py
product/product_tests/: __init__.py
product/product_tests/test_viewsets/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/serializers/: __init__.py  product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
