[tool.poetry]
name = "books"
version = "0.1.0"
description = ""
authors = ["sarahamelo <sarah.alves.melo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
factory-boy = "^3.3.1"
django = "^5.1.4"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
pytest-django = "^4.9.0"
django-debug-toolbar = "^4.4.6"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
waitress = "^3.0.2"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"
